[package]
name = "hapsi_dsp"
version = "0.0.1"
edition = "2021"
authors = ["Takeru KODAMA <zen.en.tonal@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hapsi = "0.0.3"
itertools = "0.11.0"
num-complex = "0.4.4"
once_cell = "1.18.0"
